fix: 레이아웃 grid overflow 문제 수정

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+html,
+body {
+  width: calc(100vw - (100vw - 100%));
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
